<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="8dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/item_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_item"
            android:inputType="textCapWords|text"
            android:maxLength="25"
            android:padding="10dp"
            android:maxLines="1"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:autofillHints="No"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_weight"
            android:padding="10dp"
            android:maxLines="1"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"
            android:maxLength="7"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/list_item_selector"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="@color/splash_color"
            android:onClick="addToGroceryList"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_grocery_list_view"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>