<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="15"
            android:background="@drawable/circle"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/serial_number"
            android:textColor="@color/splash_text"
            android:textSize="20sp"
            tools:text="3" />


        <TextView
            android:id="@+id/items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="70"
            android:fontFamily="sans-serif-black"
            android:maxLength="25"
            android:text="@string/items_list"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Chicken Biryani" />


        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="25"
            android:fontFamily="sans-serif-black"
            android:maxLength="6"
            android:padding="5dp"
            android:text="@string/_23_kg"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="300 kg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/splash_text" />

    </LinearLayout>


</LinearLayout>